2003-08-12  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/connectionpoint.c (connpoint_update): 
	Function to call to update a connection point info in _update_data().
	
	* lib/connectionpoint.h: Convenience DIR_ macros.

	* app/preferences.c (prefs_data): Make pretty formatted XML the
	default.

	* lib/dialibartrenderer.c: 
	* app/render_libart.c: Make sure art_config.h is included, cause
	some libart headers are broken.

	* configure.in (HAVE_FREETYPE): Restore CPPFLAGS to old value
	after test.  Add freetype-config cflags to cflags variable.

2003-08-11  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/authors.h: Credits for Krzysztof.

	* sheets/Flowchart.sheet.in: Updated descriptions from Krzysztof
	Foltman <kfoltman@onet.pl>.  It occurs to me that the name (rather
	than the description) is visible in the title of the properties
	dialog.  That ought to be a short description (translatable),
	though we still want long descriptions for the tooltips.  Hmmm...

	* configure.in: Updated to use AC_LINK_IFELSE instead of
	AC_TRY_COMPILE, also force to link to check libs on Solaris.

	* objects/ER/entity.c (entity_load): 
	* objects/ER/attribute.c (attribute_load): 
	* lib/attributes.c (attributes_set_default_font): 
	Check if font is non-null before unreffing.
	
2003-08-08  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/diagram.c (diagram_ungroup_selected) 
	(diagram_group_selected): Use the undo apply to make sure grouping
	and ungrouping is done in consistent manners.  This removes a fair
	amount of duplicated code from diagram.c.

	* app/undo.c (ungroup_objects_revert, ungroup_objects_apply) 
	(group_objects_revert, group_objects_apply): Working undo/redo for
	diagram tree updates.  The initial actions still don't quite work.

2003-08-07  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/create_object.c (create_object_button_press): 
	* app/undo.[ch]: 
	* app/diagram.c: Undo support for parenting.  Uses apply/revert in